--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://README.md")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://pjct-information/")
 dock_1_selected_tab_idx=0
 dock_split_1=0
 dock_1="FileSystem"
@@ -35,8 +35,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://README.md"]
+selected_script="res://README.md"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
